# fastapi-tutorial

./: .gitignore  Dockerfile  Procfile  calculations.py  docker-compose-dev.yaml  docker-compose-prod.yaml  gunicorn.service  logging.config  oauth2.py  pyproject.toml  requirements.txt  start.sh
.github/: build-deploy.yaml
.github/workflows/: build-deploy.yaml
alembic/: env.py
alembic/versions/: 0ddc5cc142e6_add_last_columns_post_table.py  3e420c73880a_add_content_column_post_table.py  597db99fac03_auto_add_vote_table.py  60ef8ee40e7e_add_user_table.py  942ee34ddfca_add_foreign_key_post_table.py  fb563c0a7023_create_posts_table.py
app/: config.py  main.py  utils.py
app/database/: database.py
app/routers/: auth.py  post.py  user.py  vote.py
app/schemas/: models.py  schemas.py
fastapi-tutorial/: pyvenv.cfg
tests/: conftest.py  database.py  test_fastapi.py  test_post.py  test_user.py  test_votes.py
